tests/sylt_std/as_int_faulty.sy
start :: fn do
    as_int("a")
end
// error: $A 'float' cannot be a 'str'
